# Todo

./: .gitignore  CLAUDE.md  NOT_FOUND_EXPLAINER.md  main.py  package.json  vercel.json
.specify/memory/: constitution.md
backend/: .dockerignore  Dockerfile  README-PHASE1.md  installed_packages.txt  pyproject.toml  test_logic.py  todo.db
backend/src/: auth.py  dapr_utils.py  database.py  main.py  models.py  todo_manager.py
backend/src/analytics/: main.py
backend/src/chat/: agent.py
backend/src/mcp/: server.py
backend/src/routes/: chat.py  tasks.py
deploy/dapr/components/: components.yaml
deploy/helm/todo-app/: Chart.yaml  values.yaml
deploy/helm/todo-app/templates/: backend.yaml  frontend.yaml
frontend/: .dockerignore  Dockerfile  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/lib/: api.ts  auth.ts
history/prompts/general/: 001-init-planning.general.prompt.md  002-fix-lucide-react-dependency.general.prompt.md  003-not-found-explanation.general.prompt.md
history/prompts/phase1-console/: 002-phase1-done.green.prompt.md
specs/phase1-console/: plan.md  spec.md  tasks.md
specs/phase2-web/: plan.md  spec.md  tasks.md
specs/phase3-chatbot/: plan.md  spec.md  tasks.md
specs/phase4-k8s/: plan.md  spec.md  tasks.md
specs/phase5-cloud/: plan.md  spec.md  tasks.md
